[gd_scene load_steps=2 format=3 uid="uid://gf380uy1trbp"]

[ext_resource type="Script" path="res://Scripts/MainMenuAndLoadScene/StartScene.gd" id="1_bqfmn"]

[node name="StartScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bqfmn")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 2
offset_right = 540.0
offset_bottom = 960.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -171.0
offset_right = 70.0
grow_vertical = 0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="AboutButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "About"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
